--- a/index.html
+++ b/index.html
@@ -252,8 +252,8 @@ body {
     <p class="description">Welcome to cloverium</p>
     <input type="text" class="input" placeholder="Enter a search query or URL">
   </div>
-  <a href="https://github.com/proudparrot2/ultraviolet" target="_blank">GitHub</a>
-  <a href="https://github.com/titaniumnetwork-dev/ultraviolet" target="_blank">Ultraviolet</a>
+  <a href="gxmes.html" target="_blank">games</a>
+  <a href="apps.html" target="_blank">apps</a>
 <div class="par">
 </div>
 
@@ -325,10 +325,6 @@ body {
     // Themes script
          function changeTheme(color) {
             document.body.style.backgroundColor = `var(${color})`;
-        }
-        
-        function resetTheme() {
-            document.body.style.backgroundColor = `#082E5F`;
         }
   </script>
 </body>
