--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
   <title>cloverium</title>
 
   <!-- Meta tags for SEO -->
-  <meta property="og:title" content="Potato">
+  <meta property="og:title" content="Cloverium">
   <meta property="og:description"
-    content="The gateway to open Restriction at school" />
+    content="The key to fun" />
   <meta property="og:image" content="" />
 
   <!-- Styles and fonts -->
