--- a/index.html
+++ b/index.html
@@ -252,7 +252,11 @@
             <div class="recommendations"></div>
         </div>
     </div>
-
+  <!-- Scripts -->
+  <script src="./uv/uv.bundle.js"></script>
+  <script src="./uv/uv.config.js"></script>
+  <script src="./assets/register-sw.js"></script>
+    
     <button class="settings-btn">⚙️</button>
 
     <div class="overlay"></div>
