--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         }
 
         .settings-btn:hover {
-            color: var(--secondary);
+            color: var (--secondary);
         }
 
         .settings-panel {
@@ -252,10 +252,10 @@
             <div class="recommendations"></div>
         </div>
     </div>
-  <!-- Scripts -->
-  <script src="./uv/uv.bundle.js"></script>
-  <script src="./uv/uv.config.js"></script>
-  <script src="./assets/register-sw.js"></script>
+    <!-- Scripts -->
+    <script src="./uv/uv.bundle.js"></script>
+    <script src="./uv/uv.config.js"></script>
+    <script src="./assets/register-sw.js"></script>
     
     <button class="settings-btn">⚙️</button>
 
@@ -264,7 +264,7 @@
     <div class="settings-panel">
         <div class="settings-header">
             <span class="settings-title">Settings</span>
-            <button class="close-btn">×</button>
+            <button class="close-btn">✖</button>
         </div>
         
         <div class="theme-selector">
@@ -407,6 +407,18 @@
                 recommendationsContainer.style.display = 'none';
             }
         });
+
+        searchInput.addEventListener('keydown', (e) => {
+            if (e.key === 'Enter') {
+                e.preventDefault();
+                handleSearch(searchInput.value);
+            }
+        });
+
+        function handleSearch(query) {
+            console.log(`Search query: ${query}`);
+            // Add your search handling logic here
+        }
 
         // Click handlers for recommendations
         recommendationsContainer.addEventListener('click', (e) => {
